fix(Dropdown): Delete extra space and content in header test and style

--- a/src/components/DropdownMenu/DropdownMenu.scss
+++ b/src/components/DropdownMenu/DropdownMenu.scss
@@ -12,18 +12,15 @@
 .zui-dropdown-menu {
   width: 16rem; // 256px
   padding: 0.5rem;
-
   background: $purple-10;
   display: flex;
   flex-direction: column;
   border-radius: 1rem;
   border: 1px solid $purple-25;
-
   transform-origin: var(--radix-dropdown-menu-content-transform-origin);
 
   .zui-dropdown-item {
     padding: 1rem;
-
     color: $text-primary;
     outline: none;
 
@@ -33,26 +30,17 @@
     }
 
     border-radius: 0.5rem;
-
     user-select: none;
     cursor: pointer;
   }
 
   .zui-dropdown-header-container {
     padding: 0.5rem 1rem 1rem 1rem;
-
     border-bottom: 1px solid $purple-dark-5;
-
     user-select: none;
-  }
-
-  .zui-dropdown-header-title {
     font-weight: $font-weight-bold;
     font-size: $size-default;
-
     color: $text-primary;
     outline: none;
-
-    user-select: none;
   }
 }
